--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "storytime-reader-on-aws",
-  "version": "0.1.0",
-  "description": "App for playing StoryTime that is hosted on AWS.",
-  "main": "app.js",
+  "version": "1.0.0",
+  "description": "StoryTime API for playing story-games.",
+  "main": "lambda.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "claudia create --version dev --region us-west-2 --api-module api",
+    "deploy": "claudia create --handler lambda.handler --deploy-proxy-api --region us-west-2",
     "update": "claudia update",
+    "generate-proxy": "claudia generate-serverless-express-proxy --express-module app",
     "release": "claudia set-version --version production",
     "start": "ntl"
   },
