--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ntl": "^3.0.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.291.0",
     "aws-serverless-express": "^3.2.0",
     "express": "^4.16.3"
   }
