--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "aws-sdk": "^2.291.0",
     "aws-serverless-express": "^3.2.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3"
   }
 }
